# fastApiStock

./: .dockerignore  .env.example  .gitignore  .mise.toml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  Procfile  README.md  alembic.ini  docker-compose.dev.yml  mypy.ini  pyproject.toml
.claude/: settings.local.json
.claude/agents/: cicd.md  codereviewer.md  codexreviewer.md  developer.md  qa.md  sa.md
.codex/agents/: cicd.toml  qa.toml  (+2 more)
alembic/: env.py
docs/: architecture.md
graphify-out/: GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
tests/: conftest.py  test_backfill_history.py  test_fx_service.py  test_health.py  test_history_api.py  test_history_webhook.py  test_index.py  test_indicators.py  test_investment_plan_repo.py  test_investment_plan_service.py  test_json_formatter.py  test_logging_middleware.py  test_news_repo.py  test_news_service.py  test_pnl_service.py  test_portfolio_cache.py  test_portfolio_repo.py  test_portfolio_repo_pnl.py  test_portfolio_service.py  test_portfolio_snapshot_repo.py  test_redis_cache.py  test_report_history_repo.py  test_report_pipeline.py  test_report_pipeline_integration.py  test_report_service.py  test_reports_router.py  test_scheduler.py  test_sheet_writer.py  test_signal_history_repo.py  test_signal_service.py  test_spec005_edge_cases.py  test_spec007_structured_logging.py  test_spec009_bot_commands.py  test_stocks.py  test_telegram_formatter.py  test_telegram_send_rich.py  test_transactions_repo.py  test_trigger_endpoint.py  test_tw_telegram_rich.py  test_twstock_repo_resolve_price.py  (+4 more)
(+164 files in other folders)
