[project]
name = "fastapistock"
version = "0.1.0"
description = "Stock data API built with FastAPI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.3",
    "python-dotenv>=1.2.2",
    "redis>=5.0.0",
    "slowapi>=0.1.9",
    "uvicorn>=0.42.0",
    "yfinance>=1.2.0",
]

[dependency-groups]
dev = [
    "fakeredis>=2.0.0",
    "httpx>=0.28.1",
    "mypy>=1.20.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.9",
    "types-pyyaml>=6.0.12.20250915",
    "types-requests>=2.33.0.20260402",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "S", "B"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.ruff.format]
quote-style = "single"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fastapistock"]
